default/objects/NVMConnect__DialList__c/NVMConnect__DialList__c.object-meta.xml
<CustomObject>
    <description>Master record for marshalling calls to assign to self or other agents</description>
    <label>Dial List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dial Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>