default/objects/NVMConnect__DialList__c/fields/NVMConnect__Active__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A list must be set active before its members will be dialled</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>