default/objects/NVMConnect__DialList__c/fields/NVMConnect__AssignedAgents__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__AssignedAgents__c</fullName>
    <inlineHelpText>Number of agents assigned to the list.</inlineHelpText>
    <label>Assigned Agents</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>