default/objects/NVMConnect__DialList__c/fields/NVMConnect__CacheExpireTimeSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__CacheExpireTimeSeconds__c</fullName>
    <inlineHelpText>Cache expiration time for dynamic dial lists (if field is empty then value taken from custom settings)</inlineHelpText>
    <label>Cache expire time (s)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>