default/objects/NVMConnect__DialList__c/fields/NVMConnect__CacheSize__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__CacheSize__c</fullName>
    <inlineHelpText>Cache size for dynamic dial lists (if field is empty then value taken from custom settings)</inlineHelpText>
    <label>Cache size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>