default/objects/NVMConnect__DialList__c/fields/NVMConnect__Completed_Entries__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Completed_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Calls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>