default/objects/NVMConnect__DialList__c/fields/NVMConnect__Count_Outstanding_Calls_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Count_Outstanding_Calls_Timestamp__c</fullName>
    <description>Date and time when the job for calculating outstanding calls was last scheduled</description>
    <label>Count outstanding calls timestamp</label>
    <type>DateTime</type>
</CustomField>