default/objects/NVMConnect__DialList__c/fields/NVMConnect__Description__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>