default/objects/NVMConnect__DialList__c/fields/NVMConnect__Description_Column_Label_in_Report__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Description_Column_Label_in_Report__c</fullName>
    <description>Label in the report of the column holding the Description to be used in the Dial List of the entity to dial</description>
    <inlineHelpText>Label in the report of the column holding the Description to be used in the Dial List of the entity to dial</inlineHelpText>
    <label>Description Column Label in Report</label>
    <length>40</length>
    <type>Text</type>
</CustomField>