default/objects/NVMConnect__DialList__c/fields/NVMConnect__Dynamic__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic</label>
    <type>Checkbox</type>
</CustomField>