default/objects/NVMConnect__DialList__c/fields/NVMConnect__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Filter_Logic__c</fullName>
    <description>For internal use; stores information used to build the query filters</description>
    <label>Filter Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>