default/objects/NVMConnect__DialList__c/fields/NVMConnect__Id_Column_Label_In_Report__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Id_Column_Label_In_Report__c</fullName>
    <description>Label in the report of the column holding the Salesforce Id of the entity to dial</description>
    <inlineHelpText>Label in the report of the column holding the Salesforce Id of the entity to dial</inlineHelpText>
    <label>Id Column Label In Report</label>
    <length>40</length>
    <type>Text</type>
</CustomField>