default/objects/NVMConnect__DialList__c/fields/NVMConnect__MaxCacheExpireTimeSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__MaxCacheExpireTimeSeconds__c</fullName>
    <inlineHelpText>Max cache expire time for dynamic dial lists used for synchronous refresh as a fallback for refreshing by queueable job (if field is empty then value taken from custom settings)</inlineHelpText>
    <label>Max cache expire time (s)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>