default/objects/NVMConnect__DialList__c/fields/NVMConnect__Mode__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Mode__c</fullName>
    <inlineHelpText>Preview Mode lets agents initiate each call when they are ready; Automatic mode dials immediately</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preview</fullName>
                <default>true</default>
                <label>Preview</label>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>