default/objects/NVMConnect__DialList__c/fields/NVMConnect__Multiple_User_Ownership_List__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Multiple_User_Ownership_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether this list is for multiple users, with a custom filter for record ownership/assignment.</description>
    <label>List for multiple users with ownership.</label>
    <type>Checkbox</type>
</CustomField>