default/objects/NVMConnect__DialList__c/fields/NVMConnect__Order_By_Declarations__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Order_By_Declarations__c</fullName>
    <description>For internal use: stores the &quot;order by&quot; clause for the dial list query</description>
    <label>Order By Declarations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>