default/objects/NVMConnect__DialList__c/fields/NVMConnect__OutstandingCalls__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__OutstandingCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outstanding Calls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>