default/objects/NVMConnect__DialList__c/fields/NVMConnect__PhoneFields__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__PhoneFields__c</fullName>
    <description>For internal use; stores information used to build the query filters</description>
    <label>Phone Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>