default/objects/NVMConnect__DialList__c/fields/NVMConnect__Prevent_Refresh__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Prevent_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Refresh</label>
    <type>Checkbox</type>
</CustomField>