default/objects/NVMConnect__DialList__c/fields/NVMConnect__Primary_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Primary_Phone_Field__c</fullName>
    <description>The field to use as the default number to dial if present; if empty, the secondary will be used if available</description>
    <label>Primary Phone Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NVMConnect__Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contact.HomePhone</fullName>
            </value>
            <value>
                <fullName>Contact.MobilePhone</fullName>
            </value>
            <value>
                <fullName>Contact.Phone</fullName>
            </value>
            <value>
                <fullName>HomePhone</fullName>
            </value>
            <value>
                <fullName>MobilePhone</fullName>
            </value>
            <value>
                <fullName>NVM_Phone__c</fullName>
            </value>
            <value>
                <fullName>NVMContactWorld__Customer_Number__c</fullName>
            </value>
            <value>
                <fullName>Primary_Contact_Phone__c</fullName>
                <label>Opp Phone</label>
            </value>
            <value>
                <fullName>OtherPhone</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SuppliedPhone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>