default/objects/NVMConnect__DialList__c/fields/NVMConnect__Priority__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>