default/objects/NVMConnect__DialList__c/fields/NVMConnect__Query__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Query__c</fullName>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>