default/objects/NVMConnect__DialList__c/fields/NVMConnect__Record_Ownership_Field__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Record_Ownership_Field__c</fullName>
    <description>Name of the field that specifies record ownership. Only valid for Multiple_User_Ownership_List__c lists.</description>
    <label>Record ownership field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>