default/objects/NVMConnect__DialList__c/fields/NVMConnect__Report_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Report_Unique_Name__c</fullName>
    <description>Unique Name of the Report this List was generated from - as seen on the Save As dialogue for the Report</description>
    <inlineHelpText>Unique Name of the Report this List was generated from - as seen on the Save As dialogue for the Report</inlineHelpText>
    <label>Report Unique Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>