default/objects/NVMConnect__DialList__c/fields/NVMConnect__Secondary_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Secondary_Phone_Field__c</fullName>
    <description>Field to use if the Primary Phone field on the record is empty</description>
    <label>Secondary Phone Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NVMConnect__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>MobilePhone</fullName>
            </value>
            <value>
                <fullName>HomePhone</fullName>
            </value>
            <value>
                <fullName>OtherPhone</fullName>
            </value>
            <value>
                <fullName>SuppliedPhone</fullName>
            </value>
            <value>
                <fullName>Contact.Phone</fullName>
            </value>
            <value>
                <fullName>Contact.MobilePhone</fullName>
            </value>
            <value>
                <fullName>Contact.HomePhone</fullName>
            </value>
            <value>
                <fullName>NVMContactWorld__Customer_Number__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>