default/objects/NVMConnect__DialList__c/fields/NVMConnect__Type__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Type__c</fullName>
    <description>Type of object to call, e.g. Account, Contact or custom table</description>
    <inlineHelpText>Pick the type of data on which to base the call list</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>