default/objects/NVMConnect__DialList__c/validationRules/NVMConnect__Priority_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>NVMConnect__Priority_Less_Than_Zero</fullName>
    <active>true</active>
    <description>Priority cannot be less than zero.</description>
    <errorConditionFormula>NVMConnect__Priority__c &lt; 0</errorConditionFormula>
    <errorMessage>Priority cannot be less than zero.</errorMessage>
</ValidationRule>