default/objects/NVMConnect__DialList__c/listViews/NVMConnect__All.listView-meta.xml
<ListView>
    <fullName>NVMConnect__All</fullName>
    <columns>NAME</columns>
    <columns>NVMConnect__Type__c</columns>
    <columns>NVMConnect__Active__c</columns>
    <columns>NVMConnect__Priority__c</columns>
    <columns>NVMConnect__OutstandingCalls__c</columns>
    <columns>NVMConnect__Completed_Entries__c</columns>
    <columns>NVMConnect__Skipped_Entries__c</columns>
    <columns>NVMConnect__Mode__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>